# Wherever

./: Cargo.toml  README.md
Desktop/: Cargo.toml
Phone/Wherever/: .gitignore  build.gradle
Phone/Wherever/app/: .gitignore  build.gradle
Phone/Wherever/app/src/androidTest/java/com/fruit/wherever/: ExampleInstrumentedTest.java
Phone/Wherever/app/src/main/: AndroidManifest.xml
Phone/Wherever/app/src/main/java/com/fruit/wherever/: DBManager.java  DatabaseHelper.java  LinkActivity.java  ModifyRecord.java  QuickTileService.java  SettingsActivity.java  SqlHandler.java  WhereverCrypto.java
Phone/Wherever/app/src/main/res/drawable/: ic_tile_off.xml
Phone/Wherever/app/src/main/res/drawable-v24/: ic_tile_on.xml
Phone/Wherever/app/src/main/res/layout/: activity_modify_record.xml  settings_activity.xml
Phone/Wherever/app/src/main/res/values/: strings.xml
Phone/wherever_flutter_app/: README.md  local.properties  pubspec.yaml
Phone/wherever_flutter_app/android/app/: build.gradle
Phone/wherever_flutter_app/android/app/src/debug/: AndroidManifest.xml
Phone/wherever_flutter_app/android/app/src/main/: AndroidManifest.xml
Phone/wherever_flutter_app/android/app/src/main/kotlin/com/fruitpoi/wherever_flutter_app/: MainActivity.kt
Phone/wherever_flutter_app/integration_test/: app_test.dart
Phone/wherever_flutter_app/ios/Runner/: Info.plist
Phone/wherever_flutter_app/ios/Runner.xcodeproj/: project.pbxproj
Phone/wherever_flutter_app/test/: widget_test.dart
Server/: Cargo.toml
Server/src/: lib.rs  main.rs
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/fruit/wherever/: DBManager.java  LinkActivity.java  SettingsActivity.java
android/app/src/main/res/layout/: listview_row.xml
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/fruit/wherever/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto_java/: Cargo.toml  README.md  WhereverCrypto.java
crypto_java/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
web/: Cargo.toml  index.html
web/src/: lib.rs
web_compiled/: Cargo.toml  build.rs
web_compiled/src/: lib.rs
websocket_wasm/: Cargo.toml
websocket_wasm/src/: lib.rs
wherever/: Cargo.toml
wherever/src/: lib.rs
wordlist/: Cargo.toml  build.rs
wordlist/src/: lib.rs
