[package]
name = "server"
version = "0.1.0"
authors = ["fruit <danieltapham@gmail.com>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "1.4"
tiny_http = "0.7"
qr2term = "0.2.2"
reqwest = { version = "0.11.0", optional = true, features = ["blocking", "json"] }

[[bin]]
name = "server"

[[bin]]
name = "client"
required-features = ["reqwest"]
