[package]
name = "wherever_crypto_java"
version = "0.1.0"
authors = ["Jacob Hughes <j@jacobhughes.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.18.0"
wherever_crypto = { path = "../crypto" }

[lib]
crate_type = ["cdylib"]
