[package]
name = "server"
version = "0.1.0"
authors = ["fruit <danieltapham@gmail.com>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "1.4"
qr2term = "0.2.2"
reqwest = { version = "0.11.0", optional = true, features = ["blocking", "json"] }
warp = { version = "0.3", features = ["websocket"] }
tokio = { version = "1.1", features = ["sync", "rt", "macros", "rt-multi-thread"] }
futures = { version = "0.3" }
tokio-tungstenite = "0.13"
base64 = "0.13"
getopts = "0.2"
rand = { version = "0.8", features = ["small_rng"] }

wherever = { path = "../wherever", features = ["tungstenite"] }
wherever_crypto = { path = "../crypto" }
wherever_web_compiled = { path = "../web_compiled" }

[[bin]]
name = "server"

[[bin]]
name = "client"
required-features = ["reqwest"]
