[package]
name = "wherever"
version = "0.1.0"
authors = ["Jacob Hughes <j@distanthills.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
wherever_crypto = { path = "../crypto" }
websocket_wasm = { path = "../websocket_wasm", optional = true }
tokio-tungstenite = { version = "0.13", optional = true }
tokio = { version = "1", optional = true }
base64 = "0.13"
rand = { version = "0.8" }
wordlist = { path = "../wordlist", default-features = false, features = ["eff_short_2"] }

[features]
wasm = ["websocket_wasm"]
tungstenite = ["tokio-tungstenite", "tokio"]
